docs(checkpoint): add missing Day 4 commit-log and update worklogs
Complete T-02-01 Day 4 checkpoint artifacts:
- Add 2025-10-28-commit-log.md (detailed commit 147b4c2 documentation)
- Update 2025-10-28-notes.md with additional context
- Update 2025-10-28-work-summary.md with final statistics

These artifacts document the multi-target alias resolution implementation
and provide complete audit trail for Day 4 work session.

--- a/.artifacts/spec-tasks-T-02-01-graph-builder/worklogs/2025-10-28-notes.md
+++ b/.artifacts/spec-tasks-T-02-01-graph-builder/worklogs/2025-10-28-notes.md
@@ -17,7 +17,7 @@
    - ❌ Leads to false negatives (missing edges)
    - ❌ Non-deterministic (depends on import order)
 
-2. **Use Vec<GraphNodeIndex> for all aliases**
+2. **Use Vec `<GraphNodeIndex>` for all aliases**
    - ✅ Ensures completeness (no false negatives)
    - ⚠️ May increase false positives if no filtering
    - ✅ Deterministic (all reachable targets discovered)
@@ -26,14 +26,16 @@
    - ⚠️ Complex to implement without LocAgent's context
    - ⚠️ May still miss legitimate edges
 
-**Decision**: Chose **Option 2** - Vec<GraphNodeIndex> for multi-target support
+**Decision**: Chose **Option 2** - Vec `<GraphNodeIndex>` for multi-target support
 
 **Rationale**:
+
 - Prioritize completeness over precision initially
 - Easier to filter out false positives than recover false negatives
 - Can add heuristics later once we understand patterns
 
 **Implementation**:
+
 ```rust
 // Before (Day 3):
 type AliasMap = HashMap<String, GraphNodeIndex>;
@@ -57,6 +59,7 @@ fn insert_alias(
 ```
 
 **Impact**:
+
 - ✅ No missing edges due to alias conflicts
 - ✅ Test coverage confirms all candidates discovered
 - ⚠️ Invoke variance increased +4.5% (from +1.9% to +6.4%)
@@ -69,6 +72,7 @@ fn insert_alias(
 **Context**: Wildcard imports (`from module import *`) need to know the target module's `__all__` list, but that module may not be parsed yet (dependency order).
 
 **Problem**:
+
 ```python
 # file A.py
 from B import *  # What names does B export?
@@ -98,6 +102,7 @@ def func2(): pass
 **Decision**: Chose **Option 2** - Deferred queue with PendingWildcardExport
 
 **Implementation**:
+
 ```rust
 struct PendingWildcardExport {
     source_idx: GraphNodeIndex,
@@ -137,11 +142,13 @@ fn resolve_pending_wildcard_exports(&mut self) {
 ```
 
 **Rationale**:
+
 - Respects `__all__` constraints (matches LocAgent)
 - Handles parse order independence
 - Max 4 retries handles most cyclic dependency cases
 
 **Impact**:
+
 - ✅ Wildcard imports now correctly respect `__all__`
 - ✅ No false imports of private symbols
 - ⚠️ May leave some unresolved if cyclic depth > 4 (acceptable for now)
@@ -169,6 +176,7 @@ fn resolve_pending_wildcard_exports(&mut self) {
    - New: `for target_idx in self.resolve_targets(rel_path, alias_map, name)`
 
 **Code**:
+
 ```rust
 fn connect_behavior_edges(
     &mut self,
@@ -193,6 +201,7 @@ fn connect_behavior_edges(
 ```
 
 **Edge Cases Handled**:
+
 - ✅ Same callee invoked multiple times → 1 edge
 - ✅ Multiple callees with same name → N edges (one per target)
 - ✅ Transitive imports (A imports B imports C) → follows full chain
@@ -204,11 +213,13 @@ fn connect_behavior_edges(
 **Purpose**: Unified target resolution for behavior edges (invoke/inherit)
 
 **Logic**:
+
 1. Check alias_map first (imported/wildcard names)
 2. Fallback to file_symbols (local definitions in same file)
-3. Return all candidates as Vec<GraphNodeIndex>
+3. Return all candidates as Vec `<GraphNodeIndex>`
 
 **Code**:
+
 ```rust
 fn resolve_targets(
     &self,
@@ -237,6 +248,7 @@ fn resolve_targets(
 ```
 
 **Why separate method?**
+
 - ✅ Reusable for both invoke and inherit edges
 - ✅ Clear separation of concerns (resolution vs edge creation)
 - ✅ Easier to add filtering heuristics later (single place)
@@ -268,11 +280,13 @@ fn resolve_targets(
    - May use import distance heuristic
 
 **Implications for CDSAgent**:
+
 - We may be too permissive with wildcard traversal
 - Need to add package boundary checks
 - May need import distance metric
 
 **Action Items**:
+
 - [ ] Compare LocAgent's import resolution step-by-step
 - [ ] Add unit tests for each heuristic before implementing
 - [ ] Document differences in approach
@@ -286,6 +300,7 @@ fn resolve_targets(
 **Purpose**: Validate multi-target alias resolution for invoke edges
 
 **Scenario Setup**:
+
 ```python
 # pkg/a.py
 def merge(x, y):
@@ -305,11 +320,13 @@ def main():
 ```
 
 **Expectations**:
+
 - `client.py::main` has 2 invoke edges:
   1. → `pkg/a.py::merge`
   2. → `pkg/b.py::merge`
 
 **Test Code** (lines 420-480):
+
 ```rust
 #[test]
 fn invoke_edges_include_all_alias_candidates() {
@@ -353,11 +370,13 @@ fn invoke_edges_include_all_alias_candidates() {
 ### Alias Map Memory Impact
 
 **Before (Day 3)**:
+
 - `HashMap<String, GraphNodeIndex>`
 - Memory: ~16 bytes per entry (8 for String, 8 for u32 index)
 - Typical graph (LocAgent): ~1,500 entries → 24 KB
 
 **After (Day 4)**:
+
 - `HashMap<String, Vec<GraphNodeIndex>>`
 - Memory: ~24 bytes per entry (8 for String, 16 for Vec allocation + capacity)
 - Average Vec length: 1.2 targets per name (estimated)
@@ -366,6 +385,7 @@ fn invoke_edges_include_all_alias_candidates() {
 **Impact**: ~+19 KB memory per graph (~80% increase)
 
 **Assessment**:
+
 - ✅ Acceptable overhead for correctness
 - ✅ Still scales linearly with repo size
 - ✅ No performance degradation observed in tests
@@ -422,6 +442,7 @@ fn invoke_edges_include_all_alias_candidates() {
 **Context**: `auto_search_main.py::main → auto_search_main.py::merge` (both in same file)
 
 **Options**:
+
 1. Filter all same-file calls → May miss legitimate self-module dependencies
 2. Filter only when caller == callee → May still over-filter
 3. Keep all → Current behavior, leads to +6.4% variance
@@ -433,6 +454,7 @@ fn invoke_edges_include_all_alias_candidates() {
 **Context**: LocAgent tracks decorator application separately, we currently treat as regular invoke
 
 **Options**:
+
 1. Add new edge type `EdgeKind::Decorate`
 2. Filter decorator invokes from standard invoke edges
 3. Keep current behavior
@@ -460,4 +482,4 @@ fn invoke_edges_include_all_alias_candidates() {
 
 ---
 
-**End of Day 4 Notes**
+End of Day 4 Notes session-01
