docs(checkpoint): T-02-01 Day 4 Session-3 worklog artifacts
Complete Session-3 checkpoint with parity debugging documentation:

**Session-3 Overview** (06:58:08Z - 07:27:07Z):
- Implemented self-recursive invoke edge filtering
- Added PARITY_DEBUG hooks for alias map tracing
- Normalized parity diagnostics (:: → : format)
- Analyzed invoke variance reversal (+6.4% → -5.84%)

**Updated Artifacts**:
- metadata.yaml: Added Session-3 comment with root cause analysis
- work-summary.md: Session-3 section with parity results table
- notes.md: Decisions 6, 7, 8 (filter, diagnostics, debug hooks)
- commit-log.md: Timestamp fixes (UTC format standardization)
- action log: DEVCOOKING-WORK-ACTIONSLOGS-2025-10-28-01.txt

**Root Cause Identified**:
- Session 1 (+6.4%): 531 correct + 34 self-recursive = 565 edges
- Session 3 (-5.84%): 531 correct - 31 missing symbols = 500 edges
- Missing symbols: load_jsonl, append_to_jsonl, load_gt_dict, etc.
- Hypothesis: Wildcard export handling not populating alias map correctly

**Metrics**:
- Session time: 0.5 hours
- Lines added: +30 (debugging hooks)
- Files modified: 3 (behaviors.rs, imports.rs, graph_parity_tests.rs - uncommitted)
- Day 4 total: 9.5 hours
- Cumulative: 25 hours / 40 hours estimated

**Next Steps**:
- Fix alias map population for utility modules
- Verify wildcard export handling
- Target: 531 ±2% invoke edges (520-541 acceptable)

See: .artifacts/spec-tasks-T-02-01-graph-builder/worklogs/2025-10-28-*

--- a/.artifacts/spec-tasks-T-02-01-graph-builder/worklogs/2025-10-28-notes.md
+++ b/.artifacts/spec-tasks-T-02-01-graph-builder/worklogs/2025-10-28-notes.md
@@ -707,4 +707,164 @@ pub(in crate::graph::builder) fn process_behavior_edges(state: &mut BuilderState
 
 ---
 
-End of Day 5 Notes (Session 1 + Session 2)
+## Session 3: Parity Debugging & Invoke Variance Analysis
+
+### Decision 6: Self-Recursive Invoke Edge Filtering
+
+**Context**: Multi-target alias resolution in Session 1 increased invoke variance to +6.4% (565 vs 531 expected). Many extra edges were self-recursive calls like `auto_search_main.py::main → auto_search_main.py::main`.
+
+**Decision**: Filter out self-recursive invoke edges where `caller_idx == target_idx`.
+
+**Rationale**:
+
+1. **LocAgent Behavior Alignment**
+   - LocAgent's `find_all_possible_callee` doesn't emit self-recursive edges
+   - Self-calls are implementation details, not architectural dependencies
+   - Filtering matches reference behavior
+
+2. **Implementation**:
+
+   ```rust
+   // In crates/cds-index/src/graph/builder/behaviors.rs
+   for target_idx in targets {
+       if caller_idx == target_idx {
+           continue; // Skip self-recursive calls
+       }
+       // ... add invoke edge
+   }
+   ```
+
+3. **Trade-offs**:
+   - ✅ Reduces false positives (self-recursion noise)
+   - ✅ Matches LocAgent parity baseline behavior
+   - ⚠️ **Over-corrected**: Variance flipped from +6.4% to -5.84%
+   - ⚠️ Filter too aggressive - removed some legitimate edges along with self-calls
+
+**Outcome**: Need to refine filter logic - current implementation too broad.
+
+### Decision 7: Parity Diagnostics Normalization
+
+**Context**: Parity debugging output was hard to compare because CDSAgent uses `::` separator while LocAgent baseline uses `:` separator for FQNs.
+
+**Decision**: Normalize parity diagnostics to translate `::` identifiers to `file:name` format matching LocAgent golden outputs.
+
+**Rationale**:
+
+1. **Apples-to-Apples Comparison**
+   - Before: `auto_search_main.py::main` vs `auto_search_main.py:main` (string mismatch)
+   - After: Both use `file:name` format for direct comparison
+   - Enables accurate "missing/extra" edge reports
+
+2. **Implementation** (crates/cds-index/tests/graph_parity_tests.rs):
+
+   ```rust
+   // Normalize CDSAgent FQNs to match golden format
+   let normalized_fqn = fqn.replace("::", ":");
+   ```
+
+3. **Benefits**:
+   - Clearer parity debugging output
+   - Easier to identify specific missing/extra edges
+   - Reduces false positives from format mismatches
+
+**Outcome**: Parity reports now directly comparable to LocAgent baseline.
+
+### Decision 8: PARITY_DEBUG Hooks for Alias Map Analysis
+
+**Context**: -5.84% invoke variance indicates missing callees in alias map. Need visibility into symbol resolution to diagnose root cause.
+
+**Decision**: Add targeted PARITY_DEBUG environment variable hooks to log:
+
+- Unresolved callee names per file during behavior processing
+- Alias map contents for problematic modules (`gen_oracle_locations.py`, `eval_metric.py`)
+- When specific modules are entered for tracing
+
+**Rationale**:
+
+1. **Diagnostic Visibility**
+   - Identifies which symbols are **not** in alias map (missing imports/exports)
+   - Shows exactly what symbols **are** discoverable for specific files
+   - Traces execution flow into problematic modules
+
+2. **Implementation**:
+
+   ```rust
+   // In behaviors.rs
+   if env::var("PARITY_DEBUG").is_ok() {
+       if file_path.contains("gen_oracle") {
+           eprintln!("DEBUG: Entering gen_oracle module");
+       }
+       eprintln!("DEBUG: Unresolved callees in {}: {:?}", file, unresolved_names);
+   }
+
+   // In imports.rs
+   if env::var("PARITY_DEBUG").is_ok() && file_path.contains("eval_metric") {
+       eprintln!("DEBUG: Alias map for eval_metric: {:?}", alias_map);
+   }
+   ```
+
+3. **Findings from Debug Output**:
+   - **Missing symbols**: `load_jsonl`, `append_to_jsonl`, `load_gt_dict`, `convert_solutions_dict`, `parse_import_nodes`
+   - **Root cause hypothesis**: Wildcard export handling not correctly populating alias map for these utility functions
+   - **Next action**: Analyze why these symbols aren't in alias map despite being imported
+
+**Outcome**: Debug hooks provide actionable data for fixing missing callees.
+
+### Implementation Details: Invoke Variance Reversal
+
+**Timeline of Changes**:
+
+1. **Before Session 1**: Invokes 541 vs 531 (+1.9% variance)
+2. **After Session 1** (multi-target alias): Invokes 565 vs 531 (+6.4% variance)
+   - Multi-target resolution found more edges (correct)
+   - But included self-recursive and potentially invalid edges (incorrect)
+3. **After Session 3** (self-recursion filter): Invokes 500 vs 531 (-5.84% variance)
+   - Self-recursion filter removed ~65 edges
+   - **Problem**: Also removed ~31 legitimate edges (531 - 500)
+   - Missing edges: utility function calls in `gen_oracle_locations`, `eval_metric`
+
+**Root Cause Analysis**:
+
+The self-recursion filter (`caller_idx == target_idx`) works correctly but exposed a deeper issue:
+
+```text
+Expected: 531 edges
+Session 1: 565 edges (+34)
+  = 531 (correct) + 34 (self-recursive + over-resolved)
+
+Session 3: 500 edges (-31)
+  = 531 (correct) - 31 (missing from alias map)
+```
+
+**Actual problem**: Alias map is missing ~31 legitimate symbols, which were being **masked** by the +34 over-resolved edges in Session 1.
+
+**Next Fix Strategy**:
+
+1. **Keep** self-recursion filter (removes noise)
+2. **Fix** alias map population:
+   - Check wildcard export handling for utility modules
+   - Verify `from util.benchmark.file import load_jsonl` creates alias
+   - Add focused tests for missing symbols
+
+3. **Target**: 531 edges ±2% (520-541 acceptable)
+
+### Key Learnings
+
+1. **Over-correction as Diagnostic Tool**
+   - Variance flipping from +6.4% to -5.84% revealed underlying alias map issue
+   - Multi-target resolution was correct, but alias map was incomplete
+   - Self-recursion filter uncovered hidden problem
+
+2. **Debug Hooks Value**
+   - PARITY_DEBUG output provides concrete missing symbol names
+   - Enables root-cause analysis instead of guessing
+   - Low-cost diagnostic tool (environment variable gated)
+
+3. **Incremental Parity Convergence**
+   - Each session narrows variance: +6.4% → -5.84% (now within 12% band)
+   - Next session targeting ≤2% final variance
+   - Systematic debugging approach working
+
+---
+
+End of Day 4 Notes (Session 1 + Session 2 + Session 3)
